Mon Oct  22 20:25:16 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Made Ewl_Table layout its children correctly.
	* Some cleanups in the ewl_test program.

Sun Oct  21 18:24:57 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* The Ewl_Window now inherits from Ewl_Box.
	* Ewl_Scrollbar cleanups.

Tue Oct  09 09:37:56 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Now move to the page after the one removed by
	  ewl_notebook_remove_visible() instead of just jumping to the first
	  page.
	* Made the notebook use its special .bits.db.

Tue Oct  09 07:49:30 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* When a widget is destroyed it now removes itself from it's parent
	  list of children.
	* It is now possible to remove pages from a Ewl_Notebook.
	* Fixed possible segv in ewl_theme_get_str().
	* ewl_callback_call* had a possible segv if the callback type was
	  EWL_CALLBACK_DESTROY and it free'd the widget, but still continued
	  traversing the callback list looking for more functions to execute.
	* Fixed segv in __ewl_text_destroy, etox_free got called even the
	  Ewl_Text hadn't been realized.

Mon Oct  08 02:58:33 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* I've fixed known bugs in the cursor behaviour in Ewl_Entry.
	* Re-worked the whole selection algorithm in Ewl_Entry. At the
	  moment it only displays the selection when you select text, it
	  doesn't copy anything to the clip board. I need to think about
	  what more features would be nice to have before i go any further.

Thu Oct  04 06:22:44 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed nasty bug in Ewl_Entry, when you do mouse_down after the
	  text, it would set the cursor pos to be to high, this
	  triggered bug when pressing delete/backspace, which could
	  result in a SEGV.
	* Also made the cursor show up after the text when cursor pos
	  is @ end. Before it didn't show up at all.